Improved thread-safety Improved resouce management Added proper error handling Added null safety.